fix(tn-toggle): fix line-height for toggle to avoid misalignment (#34)

--- a/components/form-elements/toggles/tn-toggle-mixins.scss
+++ b/components/form-elements/toggles/tn-toggle-mixins.scss
@@ -11,6 +11,7 @@ $tn-toggle-slide-width: 36px;
   display: inline-block;
   position: relative;
   height: $tn-height--toggle;
+  line-height: $tn-height--toggle;
 }
 
 @mixin tn-toggle__checkbox {
